k8s/storage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    app: longhorn
    phase: "4"
